# SimpleTrieSpellChecker

./: .gitignore  CMakeLists.txt  README.md  dictionary  text
include/: SimpleTrieSpellChecker.h
src/: SimpleTrieSpellChecker.c  main.c
